--- a/river-raft/Cargo.toml
+++ b/river-raft/Cargo.toml
@@ -12,3 +12,5 @@ crossbeam = {version="0.8.2", features=["crossbeam-channel"]}
 bincode = "1.3.3"
 serde = "1.0.162"
 serde_derive = "1.0.162"
+parking_lot = "0.12.1"
+actix-web = "4"
